profilelist1exp/unpackaged/objects/Partner_Service_Enabled_Product__c.object
<CustomObject>
    <description>As part of PAM project, we are including this feature into Dell Main.</description>
    <fields>
        <fullName>Action_Performed_By__c</fullName>
        <description>capture the record modifiers email address</description>
        <label>Action Performed By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Activate_Delete__c</fullName>
        <formula>IF((now()-LastModifiedDate)*24&gt;24, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>EMC ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EMC_Integration_Status__c</fullName>
        <label>EMC Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting Sync</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Has Error</fullName>
                </value>
                <value>
                    <fullName>Do Not Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMC_Last_Sync_date__c</fullName>
        <label>EMC Last Sync date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EMC_Operation__c</fullName>
        <description>To determine the type of Operation</description>
        <label>EMC Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Creation</fullName>
                    <default>true</default>
                    <label>Creation</label>
                </value>
                <value>
                    <fullName>Deletion</fullName>
                </value>
                <value>
                    <fullName>Updation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_message__c</fullName>
        <label>Exception message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Partner_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Partner Support Options</relationshipLabel>
        <relationshipName>Partner_Service_Enabled_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Track_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Partner_Track__r.Id , Partner_Track__r.Partner_Track_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Track Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipLabel>Support Partner Support Options</relationshipLabel>
        <relationshipName>Support_Partner_Support_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Enabled_Key__c</fullName>
        <label>Service Enabled Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Enabled_Product__c</fullName>
        <label>Support Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AppSync-SW</fullName>
                </value>
                <value>
                    <fullName>Avamar-HW</fullName>
                </value>
                <value>
                    <fullName>Avamar-SW</fullName>
                </value>
                <value>
                    <fullName>AX-SW</fullName>
                </value>
                <value>
                    <fullName>CampusN-HW</fullName>
                </value>
                <value>
                    <fullName>CampusN-SW</fullName>
                </value>
                <value>
                    <fullName>Captiva-SW</fullName>
                </value>
                <value>
                    <fullName>Centera-HW</fullName>
                </value>
                <value>
                    <fullName>Centera-SW</fullName>
                </value>
                <value>
                    <fullName>CloudBoost-HW</fullName>
                </value>
                <value>
                    <fullName>CloudBoost-SW</fullName>
                </value>
                <value>
                    <fullName>Connectrix-HW</fullName>
                </value>
                <value>
                    <fullName>Connectrix-SW</fullName>
                </value>
                <value>
                    <fullName>CyberR-HW</fullName>
                </value>
                <value>
                    <fullName>CyberR-SW</fullName>
                </value>
                <value>
                    <fullName>Data Domain-HW</fullName>
                </value>
                <value>
                    <fullName>Data Domain-SW</fullName>
                </value>
                <value>
                    <fullName>Data Protect Central-SW</fullName>
                </value>
                <value>
                    <fullName>DCNet-HW</fullName>
                </value>
                <value>
                    <fullName>DCNet-SW</fullName>
                </value>
                <value>
                    <fullName>DLm (DD)-HW</fullName>
                </value>
                <value>
                    <fullName>DLm (VNX)-HW</fullName>
                </value>
                <value>
                    <fullName>DLm-SW</fullName>
                </value>
                <value>
                    <fullName>Doc Sci-SW</fullName>
                </value>
                <value>
                    <fullName>Documentum-SW</fullName>
                </value>
                <value>
                    <fullName>DPSuiteA-SW</fullName>
                </value>
                <value>
                    <fullName>DPSuiteC-HW</fullName>
                </value>
                <value>
                    <fullName>DPSuiteC-SW</fullName>
                </value>
                <value>
                    <fullName>DPSuite-SW</fullName>
                </value>
                <value>
                    <fullName>DPSuiteVM-SW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Support Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Enabled_Product__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>HW L1 L2 L3 MON B/F PART-DEL RTF 4HR</fullName>
                </value>
                <value>
                    <fullName>HW L1 L2 L3 MON B/F PART-DEL RTF NBD</fullName>
                </value>
                <value>
                    <fullName>HW L1 L2 L3 MON PART-DEL RTF</fullName>
                </value>
                <value>
                    <fullName>HW L1 L2 L3 MON RTF</fullName>
                </value>
                <value>
                    <fullName>HW L2 L3 MON B/F PART-DEL RTF 4HR</fullName>
                </value>
                <value>
                    <fullName>HW L2 L3 MON B/F PART-DEL RTF NBD</fullName>
                </value>
                <value>
                    <fullName>HW L2 L3 MON PART-DEL RTF</fullName>
                </value>
                <value>
                    <fullName>HW L2 L3 MON RTF</fullName>
                </value>
                <value>
                    <fullName>HW L2 L3 PART-DEL RTF</fullName>
                </value>
                <value>
                    <fullName>HW L2 L3 RTF</fullName>
                </value>
                <value>
                    <fullName>HW L3</fullName>
                </value>
                <value>
                    <fullName>HW L3, B/F PART-DEL RTF NBD</fullName>
                </value>
                <value>
                    <fullName>HW L3 B/F PART-DEL RTF 4HR</fullName>
                </value>
                <value>
                    <fullName>HW L3 MON B/F PART-DEL RTF 4HR</fullName>
                </value>
                <value>
                    <fullName>HW L3 MON B/F PART-DEL RTF NBD</fullName>
                </value>
                <value>
                    <fullName>HW L3 MON PART-DEL RTF</fullName>
                </value>
                <value>
                    <fullName>HW L3 MON RTF</fullName>
                </value>
                <value>
                    <fullName>HW L3 PART-DEL RTF</fullName>
                </value>
                <value>
                    <fullName>HW L3 RTF</fullName>
                </value>
                <value>
                    <fullName>Remote Connection L3 NBD Parts Support</fullName>
                </value>
                <value>
                    <fullName>Remote Connection L3 RTF</fullName>
                </value>
                <value>
                    <fullName>SW L1 L2 L3 SPPT</fullName>
                </value>
                <value>
                    <fullName>SW L1 L2 L3 SPPT RR SLO</fullName>
                </value>
                <value>
                    <fullName>SW L2 L3 SPPT</fullName>
                </value>
                <value>
                    <fullName>SW L2 L3 SPPT RR SLO</fullName>
                </value>
                <value>
                    <fullName>SW L3 SPPT</fullName>
                </value>
                <value>
                    <fullName>SW L3 SPPT RR SLO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Support Partner Support Options</label>
    <nameField>
        <displayFormat>SPSO - {000000}</displayFormat>
        <label>Partner Service Enabled Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Partner Support Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Partner_Quoting_Account_enabled</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Partner_Track__r.Primary_Sales_Motion_Affinity_ID__c ==  Partner_Track__r.Primary_SMAffinity_Account__r.Account_ID__c ,
 Partner_Track__r.Primary_SMAffinity_Account__r.Partner_Quoting_Account__c == false,not(isPickval(EMC_Operation__c, &apos;Deletion&apos;)))</errorConditionFormula>
        <errorMessage>Partner Account is not Quoting Enabled. Please enable in GAMA.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Product_Update</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISCHANGED(Service_Enabled_Product__c),ISCHANGED(Service_Level__c))</errorConditionFormula>
        <errorMessage>You cannot change the Product or Service Level. Please delete this Product if it is no longer valid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Partner_Track_For_SPSO</fullName>
        <active>true</active>
        <description>Can&apos;t change Partner Track field once created</description>
        <errorConditionFormula>AND( !(ISNEW()),ISCHANGED(Partner_Track__c))</errorConditionFormula>
        <errorMessage>Cannot change the Partner Track</errorMessage>
    </validationRules>
</CustomObject>